--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,12 @@
   margin: 0px !important;
 }
 
-#date-picker-dialog{
+#date-picker-dialog-asistencia{
+  border: 0px;
+  text-align: center;
+}
+
+#date-picker-dialog-reportes{
   border: 0px;
   text-align: center;
 }
