--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@ body {
   background-image: url("./images/background.jpg"); 
   background-repeat: no-repeat; 
   background-attachment: fixed;
-  min-height: 100%
+  min-height: 100%;
 }
 
 code {
