--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,11 @@
   text-align: center;
 }
 
+#date-picker-dialog-crear-particular {
+  border: 0px;
+  text-align: center;
+}
+
 #date-picker-dialog-reportes {
   border: 0px;
   text-align: center;
@@ -34,6 +39,18 @@
 
 #mis-reservas-button {
   margin: 0px 0px 1em 0px;
+}
+
+#soy-admin-button {
+  margin: 3em 0px 1em 0px;
+}
+
+#solicitudes-pendientes {
+  padding: 3em 0px 1em 0px;
+}
+
+#tengo-un-codigo {
+  padding: 1.5em 0em 0.5em 0em;
 }
 
 .footerStyle {
@@ -56,4 +73,13 @@
 
 .ui.horizontal.celled.list {
   margin-top: 15px;
+}
+
+.ui.tabular.menu .item {
+  padding: 0.7em !important;
+}
+
+#search-parti-eucaristia {
+  margin-left: 0.5em;
+  margin-right: 1em;
 }
